changed css path to lowercase

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="work.html" target="_blank"><img width="300" src="css/Images/work.png" class="work"/></a>
         <img width="900" src="css/Images/frontLogo.png" class="frontLogo"/>
         <a href="https://udaganuniverse.com/" target="_blank"><img width="300" src="css/Images/shop.png" class="shop"/></a>
-        <a href="https://www.etsy.com/uk/shop/UDAGANuniverse" target="_blank"><img width="300" src="CSS/Images/etsy.png" class="etsy"/></a>
+        <a href="https://www.etsy.com/uk/shop/UDAGANuniverse" target="_blank"><img width="300" src="css/Images/etsy.png" class="etsy"/></a>
         <a href="music.html" target="_blank"><img width="300" src="css/Images/music.png" class="music"/></a>
         <a href="news.html" target="_blank"><img width="300" src="css/Images/news.png" class="news"/></a>
         <a href="blog.html" target="_blank"><img width="300" src="css/Images/blog.png" class="blog"/></a>
