update about.html lower case of css

--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         <p>Saydyy-Kuo</p>
       </header>
       <main>
-        <img width="500" src="CSS/Images/aboutphoto.png" class="photosaydyy-kuo" alt="photosaydyy-kuo"/>
+        <img width="500" src="css/Images/aboutphoto.png" class="photosaydyy-kuo" alt="photosaydyy-kuo"/>
         <article>
           <h2>TITLE HEADING</h2>
 
