--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,16 @@
     <title></title>
     <link rel="stylesheet" href="contactstyle.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169180827-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169180827-1');
+</script>
+
   </head>
   <body>
     <header>
