--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
   gtag('config', 'UA-169180827-1');
 </script>
-
+     
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e916909059d5fbb790bc2d4f3/9208e17e943e1d1a0c55080f2.js");</script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
