added background picture

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </header>
 
     <main>
+        <img src="css/Images/bg.jpg" alt="background" class="background"/>
         <a href="about.html" target="_blank"><img width="300" src="css/Images/About.png" class="about"/></a>
 
         <a href="work.html" target="_blank"><img width="300" src="css/Images/work.png" class="work"/></a>
