--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
     <header>
         <img width="1300" src="css/Images/SaydyyKuo.png" class="SaydyyKuo"/>
     </header>
+    
+    <div class="canvas-container">
+        <div class="canvas">
+​
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function()
+        {
+            $(window).on('resize', function()
+            {
+                $('.canvas-container').each(function()
+                {
+                    var w = $(this).width();
+                    var h = $(this).height();
+
+                    var size = w <= h ? w : h;
+
+                    $(this).children('.canvas').width(size).height(size);
+                });
+            });
+            $(window).resize();
+            $('.canvas-container').fadeIn();
+        });
+    </script>
 
     <main>
         <img src="css/Images/bg.jpg" alt="background" class="background"/>
