--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
         <img width="1300" src="css/Images/SaydyyKuo.png" class="SaydyyKuo"/>
     </header>
     
+    <style>
+       
+        .canvas-container
+        {
+            width: 90vw;
+            margin-right:5vw;
+            margin-left:5vw;
+
+            height: 75vh;
+            margin-bottom: 5vh;
+            margin-top: 20vh;
+
+            display: none;
+        }
+        .canvas
+        {
+            margin: 0 auto;
+            border: 2px solid yellow;
+        }
+    </style>
+
     <div class="canvas-container">
         <div class="canvas">
 ​
