--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         margin-bottom: 5vh;
         margin-top: 20vh;
         top: 260%;
+        position: absolute;
     
         display: none;
     }
