--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             margin-top: 20vh;
             top: 55%;
             position: absolute;
+            z-index: 10;
         
             display: none;
         }
