--- a/index.html
+++ b/index.html
@@ -37,16 +37,7 @@
     </header>
 
     <main>
-        <a href="about.html" target="_blank"><img width="100" src="css/Images/About.png" class="about"/></a>
 
-        <a href="work.html" target="_blank"><img width="100" src="css/Images/work.png" class="work"/></a>
-        <img width="600" src="css/Images/frontLogo.png" class="frontLogo"/>
-        <a href="https://udaganuniverse.com/" target="_blank"><img width="100" src="css/Images/shop.png" class="shop"/></a>
-        <a href="https://www.etsy.com/uk/shop/UDAGANuniverse" target="_blank"><img width="100" src="css/Images/etsy.png" class="etsy"/></a>
-        <a href="music.html" target="_blank"><img width="100" src="css/Images/music.png" class="music"/></a>
-        <a href="news.html" target="_blank"><img width="100" src="css/Images/news.png" class="news"/></a>
-        <a href="blog.html" target="_blank"><img width="100" src="css/Images/blog.png" class="blog"/></a>
-        <a href="contact.html" target="_blank"><img width="100" src="css/Images/contact.png" class="contact"/></a>
 
     
 
@@ -96,7 +87,15 @@
         </style>
         <div class="canvas-container">
             <div class="canvas">
-    ​
+    ​            <a href="about.html" target="_blank"><img width="100" src="css/Images/About.png" class="about"/></a>
+                <a href="work.html" target="_blank"><img width="100" src="css/Images/work.png" class="work"/></a>
+                <img width="600" src="css/Images/frontLogo.png" class="frontLogo"/>
+                <a href="https://udaganuniverse.com/" target="_blank"><img width="100" src="css/Images/shop.png" class="shop"/></a>
+                <a href="https://www.etsy.com/uk/shop/UDAGANuniverse" target="_blank"><img width="100" src="css/Images/etsy.png" class="etsy"/></a>
+                <a href="music.html" target="_blank"><img width="100" src="css/Images/music.png" class="music"/></a>
+                <a href="news.html" target="_blank"><img width="100" src="css/Images/news.png" class="news"/></a>
+                <a href="blog.html" target="_blank"><img width="100" src="css/Images/blog.png" class="blog"/></a>
+                <a href="contact.html" target="_blank"><img width="100" src="css/Images/contact.png" class="contact"/></a>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
