--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 <div class="row row-1 top left corner">
 
-                    <a href="#"><img src="images/links/work.png" /></a>
+                    <a href="work.html"><img src="css/Images/work.png" /></a>
 
                 </div>
 
