--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
 
                 <div class="row row-2 left edge">
 
-                    <a href="#"><img src="images/links/music.png" /></a>
+                    <a href="music.html"><img src="css/Images/music.png" /></a>
 
                 </div>
 
                 <div class="row row-3 bottom left corner">
 
-                    <a href="#"><img src="images/links/blog.png" /></a>
+                    <a href="blog.html"><img src="css/Images/blog.png" /></a>
 
                 </div>
 
@@ -262,19 +262,19 @@
 
                 <div class="row row-1 top edge">
 
-                    <a href="#"><img src="images/links/about.png" /></a>
+                    <a href="about.html"><img src="css/Images/about.png" /></a>
 
                 </div>
 
                 <div class="row row-2 center">
 
-                    <img src="images/icon.png" />
+                    <img src="css/Images/frontLogo.png" />
 
                 </div>
 
                 <div class="row row-3 bottom edge">
 
-                    <a href="#"><img src="images/links/contact.png" /></a>
+                    <a href="contact.html"><img src="css/Images/contact.png" /></a>
 
                 </div>
 
@@ -284,19 +284,19 @@
 
                 <div class="row row-1 top right corner">
 
-                    <a href="#"><img src="images/links/shop.png" /></a>
+                    <a href="shop.html"><img src="css/Images/shop.png" /></a>
 
                 </div>
 
                 <div class="row row-2 left edge">
 
-                    <a href="#"><img src="images/links/etsy.png" /></a>
+                    <a href="etsy.html"><img src="css/Images/etsy.png" /></a>
 
                 </div>
 
                 <div class="row row-3 bottom right corner">
 
-                    <a href="#"><img src="images/links/news.png" /></a>
+                    <a href="news.html"><img src="css/Images/news.png" /></a>
 
                 </div>
 
