--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                 <div class="row row-1 top edge">
 
-                    <a href="about.html"><img src="css/Images/about.png" /></a>
+                    <a href="about.html"><img src="css/Images/About.png" /></a>
 
                 </div>
 
