--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             height: 100%;
 
-            background-image: url('images/title.png');
+            background-image: url('css/Images/SaydyyKuo.png');
             
             background-size: contain;
 
