--- a/index.html
+++ b/index.html
@@ -385,5 +385,10 @@
     </script>
 
 
+
+<footer id="footer">
+    <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
+</footer>
+
 </body>
 </html>
