--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
 
 		<meta content="utf-8" http-equiv="encoding">
 
-		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/base-min.css">
+        
+        <div class='container'>
+            <div class="content">
+               <a href="https://www.facebook.com/saydyko.udagan" target="_blank" class="fa fa-facebook"></a>
+               <a href="https://twitter.com/Saydyy_Kuo" target="_blank" class="fa fa-twitter"></a>
+               <a href="https://www.linkedin.com/in/saydyko-south/" target="_blank" class="fa fa-linkedin"></a>
+               <a href="https://www.youtube.com/channel/UCJ2aIig6IbwO-0nUrCNnWNQ?view_as=subscriber" target="_blank" class="fa fa-youtube"></a>
+               <a href="https://www.instagram.com/saydyy_kuo_fedorova/" target="_blank" class="fa fa-instagram"></a>
+             </div>
+      </div>
+      </div>
+
 
     <style>
 
