--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <style>
         .fa{
     color:white;
-    padding: 15px;
+    padding: 10px;
     width: 60px;
     height: 60px;
     text-align: center;
@@ -407,6 +407,7 @@
     margin: 0 5px;
     border-radius: 25%;
     border:2px double white;
+    border-spacing: 2px;
     transition: all .4s;
 }
 
@@ -444,7 +445,7 @@
     <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:rgb(0, 0, 0); position: relative;  clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	#mc_embed_signup{background:rgb(0, 0, 0); position: fixed;  clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
