--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                 <div class="row row-1 top edge">
 
-                    <a href="about.html"><img src="css/Images/About.png" /></a>
+                    <a href="about.html" target="blank"><img src="css/Images/About.png" /></a>
 
                 </div>
 
@@ -277,7 +277,7 @@
 
                 <div class="row row-3 bottom edge">
 
-                    <a href="contact.html"><img src="css/Images/contact.png" /></a>
+                    <a href="contact.html" target="blank"><img src="css/Images/contact.png" /></a>
 
                 </div>
 
@@ -287,7 +287,7 @@
 
                 <div class="row row-1 top right corner">
 
-                    <a href="shop.html"><img src="css/Images/shop.png" /></a>
+                    <a href="shop.html" target="blank"><img src="css/Images/shop.png" /></a>
 
                 </div>
 
