--- a/index.html
+++ b/index.html
@@ -243,19 +243,19 @@
 
                 <div class="row row-1 top left corner">
 
-                    <a href="work.html"><img src="css/Images/work.png" /></a>
+                    <a href="work.html" translate="blank"><img src="css/Images/work.png" /></a>
 
                 </div>
 
                 <div class="row row-2 left edge">
 
-                    <a href="music.html"><img src="css/Images/music.png" /></a>
+                    <a href="music.html" target="blank"><img src="css/Images/music.png" /></a>
 
                 </div>
 
                 <div class="row row-3 bottom left corner">
 
-                    <a href="blog.html"><img src="css/Images/blog.png" /></a>
+                    <a href="blog.html" target="blank"><img src="css/Images/blog.png" /></a>
 
                 </div>
 
@@ -293,13 +293,13 @@
 
                 <div class="row row-2 left edge">
 
-                    <a href="etsy.html"><img src="css/Images/etsy.png" /></a>
+                    <a href="etsy.html" target="blank"><img src="css/Images/etsy.png" /></a>
 
                 </div>
 
                 <div class="row row-3 bottom right corner">
 
-                    <a href="news.html"><img src="css/Images/news.png" /></a>
+                    <a href="news.html" target="blank"><img src="css/Images/news.png" /></a>
 
                 </div>
 
