--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
         {
             position: relative;
         }
+        
     </style>
 
 </head>
@@ -243,7 +244,7 @@
 
                 <div class="row row-1 top left corner">
 
-                    <a href="work.html" translate="blank"><img src="css/Images/work.png" /></a>
+                    <a href="work.html" target="blank"><img src="css/Images/work.png" /></a>
 
                 </div>
 
