--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
 
                 <div class="row row-1 top right corner">
 
-                    <a href="shop.html" target="blank"><img src="css/Images/shop.png" /></a>
+                    <a href="https://udaganuniverse.com/" target="blank"><img src="css/Images/shop.png" /></a>
 
                 </div>
 
                 <div class="row row-2 left edge">
 
-                    <a href="etsy.html" target="blank"><img src="css/Images/etsy.png" /></a>
+                    <a href="https://www.etsy.com/uk/shop/UDAGANuniverse" target="blank"><img src="css/Images/etsy.png" /></a>
 
                 </div>
 
