--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
         {
             position: relative;
         }
-        
+        .work{
+            cursor: pointer;
+        }
     </style>
 
 </head>
@@ -244,7 +246,7 @@
 
                 <div class="row row-1 top left corner">
 
-                    <a href="work.html" target="blank"><img src="css/Images/work.png" /></a>
+                    <a href="work.html" target="blank"><img src="css/Images/work.png" class="work" /></a>
 
                 </div>
 
