--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
         {
             position: relative;
         }
-        .work{
+        
+        .row-1 top left corner{
             cursor: pointer;
         }
     </style>
@@ -246,7 +247,7 @@
 
                 <div class="row row-1 top left corner">
 
-                    <a href="work.html" target="blank"><img src="css/Images/work.png" class="work" /></a>
+                    <a href="work.html" target="blank"><img src="css/Images/work.png" /></a>
 
                 </div>
 
