--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
         <p>Saydyy-Kuo</p>
       </header>
       <main>
-        <img width="500" src="css/Images/aboutphoto.png" class="photosaydyy-kuo" alt="photosaydyy-kuo"/>
-        <article>
+         <img src="css/Images/SaydyyKuo.png" alt="">
+        <div class="wrapper">
+        <article class="img-info">
           <h2>TITLE HEADING</h2>
 
           <h3>About myself</h3>
@@ -43,6 +44,8 @@
           
           <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
         </article>
+        <img width="500" src="css/Images/aboutphoto.png" class="photosaydyy-kuo" alt="photosaydyy-kuo"/>
+        </div>
       </main>
       <footer>
         <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
