--- a/about.html
+++ b/about.html
@@ -45,6 +45,20 @@
       <footer>
         <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
       </footer>
+      <style>
+         footer {
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    padding: 20px;
+    /*position: absolute;*/
+    bottom: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 10; 
+    display: block;
+    }
+      </style>
 
 </body>
 </html>
