--- a/about.html
+++ b/about.html
@@ -29,7 +29,11 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
     
-      
+      <style>
+        body {
+          background-color: black;
+        }
+      </style>
          <img src="css/Images/SaydyyKuo.png" alt="" class="img-banner">
         <div class="wrapper">
         <article class="img-info">
@@ -47,17 +51,17 @@
       </footer>
       <style>
          footer {
-    text-align: center;
-    background-color: rgb(0, 0, 0);
-    color: #fff;
-    padding: 20px;
-    /*position: absolute;*/
-    bottom: 0;
-    width: 100%;
-    position: fixed;
-    z-index: 10; 
-    display: block;
-    }
+         text-align: center;
+         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+         background-color: rgb(0, 0, 0);
+         color: #fff;
+         padding: 20px;
+        /*position: absolute;*/
+         bottom: 0;
+         width: 100%;
+         position: fixed;
+         z-index: 10; 
+         }
       </style>
 
 </body>
