--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           background-color: black;
         }
       </style>
-         <img src="css/Images/SaydyyKuo.png" alt="" class="img-banner">
+         <img src="css/Images/SaydyyKuo.png" alt="" class="img-banner" a href="index.html">
         <div class="wrapper">
         <article class="img-info">
           <h2>TITLE HEADING</h2>
