--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           background-color: black;
         }
       </style>
-         <img src="css/Images/SaydyyKuo.png" alt="" class="img-banner" a href="index.html"/>
+         <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
         <div class="wrapper">
         <article class="img-info">
           <h2>TITLE HEADING</h2>
@@ -43,7 +43,7 @@
           
           <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
         </article>
-        <img src="css/Images/aboutphoto.png" class="img-me" alt="photosaydyy-kuo" a href="index.html"/>
+        <a href="index.html"><img src="css/Images/aboutphoto.png" class="img-me" alt="photosaydyy-kuo"/></a> 
         </div>
       
       <footer>
