--- a/music.html
+++ b/music.html
@@ -45,6 +45,10 @@
             body {
               background-color: black;
             }
+            h2{
+              text-decoration: none;
+              color: turquoise;
+            }
           </style>
       
       <footer>
