--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
   gtag('config', 'UA-169180827-1');
 </script>
 
+<link rel="shortcut icon" href="css/Images/favicon.ico" type="image/ico"/>
+
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
