--- a/news.html
+++ b/news.html
@@ -21,6 +21,8 @@
   gtag('config', 'UA-169180827-1');
 </script>
 
+<link rel="shortcut icon" href="css/Images/favicon.ico" type="image/ico"/>
+
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
