--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
 </script>
      
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e916909059d5fbb790bc2d4f3/9208e17e943e1d1a0c55080f2.js");</script>
-</head>
-<body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTKZQJG"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
 
 	
 
@@ -164,6 +157,8 @@
 
         .canvas .edge > a
         {
+            z-index: 99999;
+
             display: inline-block;
 
             max-width: 100%;
@@ -232,7 +227,13 @@
 
 <body>
 
-    <div class="title-container">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTKZQJG"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
+<div class="title-container">
 
         <a href="/" class="title"></a>
 
