--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
          <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
         <div class="wrapper">
         <article class="img-info">
-          <h2>TITLE HEADING</h2>
+          <h2>Saydyy-Kuo and her shamanic journey...</h2>
 
           <p>Saydyy-Kuo is an indigenous illustrator, khomus performer, ethnic throat singer from the Republic of Sakha (Yakutia), which is located far North Siberia in the Arctic Circle. The place recorded as being coldest habitat place in the world with -72 C fixed in 1972 in Oymyokon.</p>
           
