--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
          background-color: rgb(0, 0, 0);
          color: #fff;
          padding: 20px;
-        /*position: absolute;*/
+         position: absolute;
          bottom: 0;
          width: 100%;
-         position: fixed;
+         /*position: fixed;*/
          z-index: 10; 
          }
       </style>
