--- a/about.html
+++ b/about.html
@@ -58,9 +58,10 @@
          background-color: rgb(0, 0, 0);
          color: #fff;
          padding: 20px;
-         position: absolute;
+         position: relative;
          bottom: 0;
          width: 100%;
+         clear: both;
          /*position: fixed;*/
          z-index: 10; 
          }
