--- a/music.html
+++ b/music.html
@@ -34,7 +34,7 @@
             <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
             <div class="wrapper">
             <article class="img-info">
-              <a href="index.html"><h2>TITLE HEADING</h2></a>
+              <a href="index.html"><h2>MUSIC</h2></a>
 
                 <iframe style="border: 0; width: 500px; height: 620px;" class="aptaakh-khomus"  src="https://bandcamp.com/EmbeddedPlayer/album=2148964608/size=large/bgcol=333333/linkcol=9a64ff/tracklist=false/transparent=true/" seamless><a href="http://saydykofedorova.bandcamp.com/album/aptaakh-khomus">Aptaakh Khomus by SAYDYY-KUO FEDOROVA</a></iframe>
 
