--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,14 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
     <header>
+      <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
+      <div class="wrapper">
+      <article class="img-info">
+        <h2>Saydyy-Kuo and her shamanic journey...</h2>
         <h1>About</h1>
         <p>Saydyy-Kuo</p>
 </header>
-
+/*
 <div class="contact-section">
 
   <h1>Contact Me</h1>
@@ -44,7 +48,7 @@
     <input type="submit" class="contact-form-btn" value="Send">
   </form>
 </div>
-
+*/
 <footer>
     <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
   </footer>
