--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
       <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
       <div class="wrapper">
       <article class="img-info">
-        <h2>Saydyy-Kuo and her shamanic journey...</h2>
-        <h1>About</h1>
-        <p>Saydyy-Kuo</p>
+        <h2>Contact</h2>
+        <h1></h1>
+        <p></p>
 </header>
-/*
+<!--
 <div class="contact-section">
 
   <h1>Contact Me</h1>
@@ -48,7 +48,7 @@
     <input type="submit" class="contact-form-btn" value="Send">
   </form>
 </div>
-*/
+-->
 <footer>
     <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
   </footer>
