--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,11 @@
       <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
       <div class="wrapper">
       <article class="img-info">
-        <h2>Contact</h2>
+      
         <h1></h1>
         <p></p>
 </header>
+       <h2>CONTACT</h2>
 <!--
 <div class="contact-section">
 
