--- a/news.html
+++ b/news.html
@@ -22,6 +22,7 @@
 </script>
 
 <link rel="shortcut icon" href="css/Images/favicon.ico" type="image/ico"/>
+<link href="css/newsstyle.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
@@ -30,6 +31,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <head>COMING VERY SOON!</head>
+
     
 </body>
 </html>
