--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,7 @@
 </script>
 
 <link rel="shortcut icon" href="css/Images/favicon.ico" type="image/ico"/>
+<link href="Blogtyle.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
