--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="contactstyle.css" type="text/css">
+    <link rel="stylesheet" href="css/contactstyle.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169180827-1"></script>
