--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,11 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTKZQJG"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <style>
+    body {
+      background-color: black;
+    }
+  </style>
     <header>
       <a href="index.html"><img src="css/Images/SaydyyKuo.png" alt="" class="img-banner"/></a>
       <div class="wrapper">
