--- a/news.html
+++ b/news.html
@@ -30,8 +30,14 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTKZQJG"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    
     <head>COMING VERY SOON!</head>
 
     
+    <style>
+        body {
+          background-color: black;
+        }
+      </style>
 </body>
 </html>
