--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,16 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTKZQJG"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    
     <header>
         <h1>COMING SOON</h1>
     </header>
+
+    <style>
+        body {
+          background-color: black;
+        }
+      </style>
     
 </body>
 </html>
