--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       <div class="wrapper">
       <article class="img-info">
       
-        <h1></h1>
+        <h2>Contact me</h2>
         <p></p>
 </header>
 
@@ -43,7 +43,7 @@
     background-color: black;
   }
 </style>
-       <h2>CONTACT</h2>
+       
 <!--
 <div class="contact-section">
 
