--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,11 @@
           background-color: black;
         }
       </style>
+
+<footer>
+    <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
+  </footer>
+  
     
 </body>
 </html>
