--- a/news.html
+++ b/news.html
@@ -39,5 +39,9 @@
           background-color: black;
         }
       </style>
+      <footer>
+        <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
+      </footer>
+    
 </body>
 </html>
