--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,11 @@
         <p></p>
 </header>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0&appId=934393660262383&autoLogAppEvents=1" nonce="L17pezmN"></script>
+
+
+<div class="fb-page" data-href="https://www.facebook.com/saydyko.udagan/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/saydyko.udagan/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/saydyko.udagan/">Saydyy Kuo Fedorova</a></blockquote></div>
 <style>
   body {
     background-color: black;
