--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       <div class="wrapper">
       <article class="img-info">
       
-        <h2>Contact me</h2>
+        <a href= "https://www.facebook.com/saydyko.udagan"><h2>Contact me</h2></a>
         <p></p>
 </header>
 
