--- a/news.html
+++ b/news.html
@@ -37,11 +37,24 @@
     <style>
         body {
           background-color: black;
+          footer {
+    text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    padding: 20px;
+    bottom: 0;
+    width: 100%;
+    position: relative;
+    clear: both;
+    z-index: 10; 
+  }
         }
       </style>
       <footer>
         <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Coding and design by Saydyy-Kuo</p>
       </footer>
+      
     
 </body>
 </html>
